# Dataminig

./: README.md  pyproject.toml  pyproject.toml.bak.toml  setup.cfg  setup.py
.tmp_dagster_home_12_iic2_/history/: runs.db
.tmp_dagster_home_12_iic2_/history/runs/: index.db
.tmp_dagster_home_12_iic2_/schedules/: schedules.db
.tmp_dagster_home_53085hth/history/: runs.db
.tmp_dagster_home_53085hth/history/runs/: e9f1573d-2419-4054-b96a-9ef23b18b1a1.db  fdb7ee23-cefc-49db-ba04-6f61f37aa401.db  index.db
.tmp_dagster_home_53085hth/schedules/: schedules.db
.tmp_dagster_home_53085hth/storage/: transform_data
.tmp_dagster_home_7ozdcxty/history/: runs.db
.tmp_dagster_home_7ozdcxty/history/runs/: 6570db94-ee93-4193-97a6-6c82a513e995.db  index.db
.tmp_dagster_home_7ozdcxty/schedules/: schedules.db
.tmp_dagster_home_7ozdcxty/storage/: load_data
.tmp_dagster_home_a5ojcqpt/history/: runs.db
.tmp_dagster_home_a5ojcqpt/history/runs/: 32bac4cd-9e91-46a2-8d93-c7cc03b47f1f.db  index.db
.tmp_dagster_home_a5ojcqpt/schedules/: schedules.db
.tmp_dagster_home_i1_fsqxz/history/: runs.db
.tmp_dagster_home_i1_fsqxz/history/runs/: 48e9a6b6-01a0-43de-a396-d2ae1bd15b4a.db  9d0fd7df-e053-47e9-8dfd-0c51dc945219.db  index.db
.tmp_dagster_home_i1_fsqxz/schedules/: schedules.db
.tmp_dagster_home_xjagckd1/history/: runs.db
.tmp_dagster_home_xjagckd1/history/runs/: index.db  (+2 more)
.tmp_dagster_home_xjagckd1/schedules/: schedules.db
.tmp_dagster_home_xjagckd1/storage/: prepare_data  train_model
example/: assets.py  definitions.py
example.egg-info/: PKG-INFO  SOURCES.txt
